--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,14 +1,15 @@
 
 <h1>Edit <%= @task.title %></h1>
-<form action="" method ="" >
-<div class="form-group">
+<form action="/tasks/<%= @task.id %>/edit/update" method="post">
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+<<div class="form-group">
   <label for="">Title</label>
-  <input type="text" name="title" id="title" class="form-control" placeholder="my title" value = <%= @task.title %> >
+  <input type="text" name="title" class="form-control" placeholder="my title" value = <%= @task.title %> >
 
 </div>
 <div class="form-group">
   <label for="">Details</label>
-  <input type="text" name="details" id="details" class="form-control" placeholder="Details" value = <%=@task.details%> >
+  <input type="text" name="details"  class="form-control" placeholder="Details" value = <%=@task.details%> >
 </div>
-<button>Create Task</button>
+<button>Save</button>
 </form>
